--- a/ci/azure-pipelines/linux.yml
+++ b/ci/azure-pipelines/linux.yml
@@ -1,11 +1,16 @@
 steps:
 - bash: sudo ci/azure-pipelines/linux-install.sh
   displayName: install dependencies
+- bash: |
+    git clone https://github.com/osgeo/gdal.git
+    ln -s $(Build.SourcesDirectory) $(Build.BinariesDirectory)/gdal/cmake4gdal
+    python $(Build.BinariesDirectory)/gdal/cmake4gdal/deploy.py
+  workingDirectory: '$(Build.BinariesDirectory)'
 - task: CMake@1
   displayName: configure gdal
   inputs:
     workingDirectory: '$(Build.BinariesDirectory)/build'
-    cmakeArgs: -DSWIG_PYTHON=ON -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_COMPILER=${{parameters.CXX}} -DCMAKE_C_COMPILER=${{parameters.CC}} -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache -DCMAKE_INSTALL_PREFIX=/usr -C$(CONFIGURATIONS) $(Build.SourcesDirectory)
+    cmakeArgs: -DSWIG_PYTHON=ON -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_COMPILER=${{parameters.CXX}} -DCMAKE_C_COMPILER=${{parameters.CC}} -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -DCMAKE_C_COMPILER_LAUNCHER=ccache -DCMAKE_INSTALL_PREFIX=/usr -C$(CONFIGURATIONS) $(Build.BinariesDirectory)/gdal
 - task: CMake@1
   displayName: build gdal
   inputs:
