Fix not to link alg object with dependency
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/cmakelists/gdal/alg/CMakeLists.txt
+++ b/cmakelists/gdal/alg/CMakeLists.txt
@@ -76,8 +76,8 @@ if(HAVE_OPENCL)
 	target_sources(alg PRIVATE gdalwarpkernel_opencl.h gdalwarpkernel_opencl.cpp )
 endif()
 
-target_compile_definitions(alg PRIVATE PROJ_RENAME_SYMBOLS)
-target_link_libraries(alg PRIVATE PROJ::PROJ)
+target_include_directories(alg PRIVATE ${PROJ_INCLUDE_DIRS})
+target_link_libraries(GDAL_LINK_LIBRARY INTERFACE PROJ::PROJ)
 
 if(GDAL_ENABLE_QHULL)
     if(GDAL_USE_QHULL_INTERNAL)
@@ -91,7 +91,7 @@ if(GDAL_ENABLE_QHULL)
         else()
             target_compile_definitions(alg PRIVATE -DQHULL_INCLUDE_SUBDIR_IS_LIBQHULL=0)
         endif()
-        target_link_libraries(alg PRIVATE ${QHULL_LIBRARY})
+        target_link_libraries(GDAL_LINK_LIBRARY INTERFACE ${QHULL_LIBRARY})
     endif()
 endif()
 
