--- a/ci/azure-pipelines/android.yml
+++ b/ci/azure-pipelines/android.yml
@@ -13,6 +13,7 @@ steps:
     git clone https://github.com/osgeo/gdal.git
     ln -s $(Build.SourcesDirectory) $(Build.BinariesDirectory)/gdal/cmake4gdal
     python $(Build.BinariesDirectory)/gdal/cmake4gdal/deploy.py
+    mkdir build
   workingDirectory: '$(Build.BinariesDirectory)'
 - task: CMake@1
   displayName: configure
