CI: run weekly, wo docker branch
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,13 @@
+trigger:
+  branches:
+    include: *
+    exclude: docker
+
+schedules:
+- cron: 48 5 * * 7
+  displayName: Weekly test build
+  branches:
+    include: master
 
 variables:
   CMAKEVER: 3.15
