CI: fix azure-pipelines.yml syntax error
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,9 @@
 trigger:
   branches:
-    include: *
-    exclude: docker
+    include:
+    - '*'
+    exclude:
+    - docker
 
 schedules:
 - cron: 48 5 * * 7
