--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,15 +1,17 @@
 trigger:
   branches:
     include:
-    - '*'
+      - '*'
     exclude:
-    - docker
+      - docker
 
 schedules:
 - cron: 48 5 * * 7
   displayName: Weekly test build
   branches:
-    include: master
+    include:
+      - master
+  always: True
 
 variables:
   CMAKEVER: 3.15
