--- a/cmakelists/gdal/gcore/CMakeLists.txt
+++ b/cmakelists/gdal/gcore/CMakeLists.txt
@@ -98,21 +98,22 @@ target_sources(gdal PRIVATE $<TARGET_OBJECTS:gcore>
                             $<TARGET_OBJECTS:rasterio>)
 include(TargetPublicHeader)
 target_public_header(TARGET gdal HEADERS
-                    ${CMAKE_CURRENT_BINARY_DIR}/gdal_version.h
-                    gdal.h
-                    gdaljp2metadata.h
-                    gdal_frmts.h
-                    gdal_pam.h
-                    gdal_priv.h
-                    gdal_proxy.h
-                    gdal_rat.h
-                    gdalexif.h
-                    gdalgeorefpamdataset.h
-                    gdal_priv_templates.hpp
-                    gdal_avx2_emulation.hpp
-                    gdal_mdreader.h
-                    gdal_pam.h
-                    gdalsse_priv.h)
+                     ${CMAKE_CURRENT_BINARY_DIR}/gdal_version.h
+                     gdal.h
+                     gdaljp2metadata.h
+                     gdal_frmts.h
+                     gdal_pam.h
+                     gdal_priv.h
+                     gdal_proxy.h
+                     gdal_rat.h
+                     rawdataset.h
+                     gdalexif.h
+                     gdalgeorefpamdataset.h
+                     gdal_priv_templates.hpp
+                     gdal_avx2_emulation.hpp
+                     gdal_mdreader.h
+                     gdal_pam.h
+                     gdalsse_priv.h)
 
 if(GDAL_USE_LIBJSONC_INTERNAL)
     target_include_directories(gcore PRIVATE $<TARGET_PROPERTY:libjson,SOURCE_DIR>)
